devsecops-nodejs-project/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-nodejs-service
  labels:
    app: devsecops-nodejs-app
spec:
  selector:
    app: devsecops-nodejs-app
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
